[package]
name = "tracer"
version = "0.1.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]

[dependencies]
futures = "^0.1"
tokio-reactor = "*"
tokio-tcp = "*"
tokio = "*"
rustls = "*"
log = "*"
failure = "*"
http = "*"
webpki = "*"
webpki-roots = "*"
hyper = "*"
tokio-rustls = "*"
hyper-rustls = "*"
futures-cpupool = "*"
crossbeam = "*"
