[package]
name = "tracer"
version = "0.1.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2018"

[dependencies]
tracer-client = { path = "../tracer-client" }
tracer-metrics = { path = "../tracer-metrics" }
clap = "2.33.0"
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
toml = "0.5.6"
serde = { version = "1.0.104", features = [ "derive" ] }
tokio = "0.2.11"
http = "0.2.0"
sha2 = "0.8.1"
crossbeam = "0.7.3"
ctrlc = "3.1.3"
futures = "0.3.4"
thiserror = "1.0.10"
anyhow = "1.0.26"
hyper = "0.13.2"
