[package]
name = "tracer-client"
version = "0.1.0"
authors = ["Benn Sundsrud <benn.sundsrud@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
tokio = { version = "0.2.11", features = [ "tcp", "rt-threaded", "io-util" ] }
log = "0.4.8"
http = "0.2.0"
webpki = "0.21.2"
webpki-roots = "0.19.0"
hyper = "0.13.2"
hyper-rustls = "0.19.1"
crossbeam = "0.7.3"
tracer-metrics = { path = "../tracer-metrics" }
thiserror = "1.0.10"
rustls = "0.16.0"
tokio-rustls = "0.12.1"
